# StreamForge

./: .clippy.toml  .dockerignore  .env.example  .env.test  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  rustfmt.toml
.github/workflows/: ci.yml
examples/: model_demo.rs
migrations/: 001_create_events_table.sql
scripts/: send_test_events.sh  test_server.sh
src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  test_utils.rs
src/api/: health.rs  mod.rs  server.rs
src/db/: event_repo.rs  mod.rs  pool.rs  repository.rs
src/kafka/: config.rs  consumer.rs  mod.rs  processor.rs  producer.rs
src/models/: error.rs  event.rs  mod.rs  validation.rs
tests/: db_integration_test.rs  integration_test.rs  kafka_integration_test.rs  models_integration_test.rs
