[package]
name = "streamforge"
version = "0.1.0"
edition = "2021"

[lib]
name = "streamforge"
path = "src/lib.rs"

[[bin]]
name = "streamforge"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
envconfig = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

validator = { version = "0.18.1", features = ["derive"] }
regex = "1.10.6"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
async-trait = "0.1.83"
backoff = { version = "0.4.0", features = ["tokio"] }
futures = "0.3.31"
log = "0.4.28"
rdkafka = { version = "0.38.0", features = ["cmake-build"] }
tokio-stream = "0.1.17"

[dev-dependencies]
tokio-test = "0.4.4"
testcontainers = "0.23.1"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
